--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,22 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Lista de Tarefas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <!-- Campo de entrada e botão para adicionar -->
+  <ion-item>
+    <ion-input type="text" [(ngModel)]="novaTarefa" placeholder="Adicionar nova tarefa"></ion-input>
+    <ion-button (click)="adicionarTarefa()">Adicionar</ion-button>
+  </ion-item>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <!-- Lista de tarefas -->
+  <ion-list>
+    <ion-item *ngFor="let tarefa of tarefas">
+      <ion-checkbox [(ngModel)]="tarefa.concluida"></ion-checkbox>
+      <ion-label [class.concluida]="tarefa.concluida">{{ tarefa.nome }}</ion-label>
+      <ion-button color="danger" (click)="removerTarefa(tarefa)">Excluir</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
