--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,31 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Lista de gêneros musicais
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <ion-list>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="nome" [(ngModel)]="nome"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-item>
+    <ion-button (click)="adicionar()"> Adicionar</ion-button>
+  </ion-item>
+
+  <ion-list>
+    <ion-item *ngFor="let item of items; let posicao = index">
+      <ion-label>
+        {{item.titulo}}
+      </ion-label>
+      <ion-button slot="end" color="white" (click) = "remover(posicao)">
+        <ion-icon slot="icon-only" name="trash-outline" color="danger"></ion-icon>
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
