calculo de média

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,42 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Calculo de Media
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-row class="linha">
+    <ion-col size-sm="12" size-md="6">
+      <ion-card>
+        <ion-card-content>
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">Nota A</ion-label>
+              <ion-input type="number" [(ngModel)]="notaA"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Nota B</ion-label>
+              <ion-input type="number" [(ngModel)]="notaB"></ion-input>
+            </ion-item>
+            <ion-button expand="block" (click)="calcularMedia()">Calcular Média</ion-button>
+            <ion-item>
+              <ion-label position="floating">Média</ion-label>
+              <ion-input type="number" [value]="media" readonly></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Situação</ion-label>
+              <ion-input [value]="situacao" readonly></ion-input>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+  </ion-row>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title class="ion-text-center">Paloma</ion-title>
+  </ion-toolbar>
+</ion-footer>
