Calculo de Média

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,8 +35,9 @@
     </ion-col>
   </ion-row>
 </ion-content>
+
 <ion-footer>
   <ion-toolbar>
-    <ion-title class="ion-text-center">Paloma</ion-title>
+    <ion-title class="ion-text-center">Paloma de L. P. Vieira</ion-title>
   </ion-toolbar>
 </ion-footer>
